--- a/css/index.css
+++ b/css/index.css
@@ -529,15 +529,18 @@ ul {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background: linear-gradient(to top right, #802B90 10%, #67A2C4 100%);
+    padding: 0;
 
-    padding: 0; /* Remove unnecessary padding */
-
-    /* Background Image 
-    background: url('../images/shield.svg') no-repeat center center/cover;
-    background-size: 30%;*/
-
+    /* Background Gradient and Image */
+    background: 
+        url('../images/shield.svg') no-repeat center center,
+        linear-gradient(to top right, #802B90 10%, #67A2C4 100%);
+    
+    background-size: 65%, cover;
+    background-position: left -32% bottom 130%, center;
 }
+
+
 
 .wicysavv p {
     color: #71e44e;
